# toggl-report-rs

./: Cargo.toml  README.md
examples/: report.rs
src/: detailed_report.rs  lib.rs  query.rs  reports.rs  summary_report.rs  weekly_report.rs
